# openGL_3D

./: CMakeLists.txt  vcpkg.json
.cache/clangd/index/: Camera.hpp.0B4A7787D094E0FF.idx  Cube.cpp.D4479F1667F10B60.idx  Cube.hpp.8ED937F685035235.idx  Floor.cpp.3B90EA69CE0F64B3.idx  Floor.hpp.E1FF173C02CAE85F.idx  Light.cpp.A67E9250973978D8.idx  Light.hpp.88E62FAACC0640DB.idx  Pyramid.cpp.6393F7BFE63EE1B8.idx  Pyramid.hpp.A4BCF0F617CE0C8E.idx  Shader.cpp.CF25276A6F11FE93.idx  Shader.hpp.66B6C62F48B7E0DB.idx  Texture.cpp.26DB0C560421B171.idx  Texture.hpp.092BAEDD62534DD2.idx  Window.cpp.521679BF3299FBF8.idx  Window.hpp.7E6749E2E0FB0D00.idx  main.cpp.BF005FE9B09459E6.idx
models/: girl.mtl
models/computer/: scene.gltf
models/ship/: scene.gltf
shaders/: default.frag  default.vert  lightCube.frag  lightCube.vert  lights.frag  model.frag
src/: Camera.hpp  Cube.cpp  Cube.hpp  Floor.cpp  Floor.hpp  Light.cpp  Light.hpp  Model.hpp  ModelMesh.hpp  Object.cpp  Object.hpp  Pyramid.cpp  Pyramid.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  main.cpp
